--- a/Makefile.am
+++ b/Makefile.am
@@ -15,6 +15,8 @@ libwilddog_a_SOURCES= \
 	./src/wilddog_ct.c \
 	./src/wilddog_ct.h \
 	./src/wilddog_debug.c \
+	./src/wilddog_conn_manage.c \
+	./src/wilddog_conn_manage.h \
 	./src/wilddog_endian.h \
 	./src/wilddog_event.c \
 	./src/wilddog_event.h \
@@ -48,123 +50,123 @@ libwilddog_a_SOURCES += \
 
 AM_CFLAGS+=-DWILDDOG_PORT=5683
 else
-if WITH_DTLS
-INCLUDES+=-I $(top_srcdir)/../lib/src/secure/dtls/inc   -I ./src/secure/dtls/inc
+if WITH_MBEDTLS
+INCLUDES+=-I $(top_srcdir)/../lib/src/secure/mbedtls/inc   -I ./src/secure/mbedtls/inc
 libwilddog_a_SOURCES += \
-	./src/secure/dtls/lib/aes.c \
-	./src/secure/dtls/lib/aesni.c \
-	./src/secure/dtls/lib/arc4.c \
-	./src/secure/dtls/lib/asn1parse.c \
-	./src/secure/dtls/lib/asn1write.c \
-	./src/secure/dtls/lib/base64.c \
-	./src/secure/dtls/lib/bignum.c \
-	./src/secure/dtls/lib/blowfish.c \
-	./src/secure/dtls/lib/camellia.c \
-	./src/secure/dtls/lib/ccm.c \
-	./src/secure/dtls/lib/certs.c \
-	./src/secure/dtls/lib/cipher.c \
-	./src/secure/dtls/lib/cipher_wrap.c \
-	./src/secure/dtls/lib/ctr_drbg.c \
-	./src/secure/dtls/lib/debug.c \
-	./src/secure/dtls/lib/des.c \
-	./src/secure/dtls/lib/dhm.c \
-	./src/secure/dtls/lib/ecdh.c \
-	./src/secure/dtls/lib/ecdsa.c \
-	./src/secure/dtls/lib/ecp.c \
-	./src/secure/dtls/lib/ecp_curves.c \
-	./src/secure/dtls/lib/entropy.c \
-	./src/secure/dtls/lib/entropy_poll.c \
-	./src/secure/dtls/lib/gcm.c \
-	./src/secure/dtls/lib/hmac_drbg.c \
-	./src/secure/dtls/lib/md5.c \
-	./src/secure/dtls/lib/md.c \
-	./src/secure/dtls/lib/md_wrap.c \
-	./src/secure/dtls/lib/net.c \
-	./src/secure/dtls/lib/oid.c \
-	./src/secure/dtls/lib/padlock.c \
-	./src/secure/dtls/lib/pem.c \
-	./src/secure/dtls/lib/pk.c \
-	./src/secure/dtls/lib/pkcs12.c \
-	./src/secure/dtls/lib/pkcs5.c \
-	./src/secure/dtls/lib/pkparse.c \
-	./src/secure/dtls/lib/pk_wrap.c \
-	./src/secure/dtls/lib/ripemd160.c \
-	./src/secure/dtls/lib/rsa.c \
-	./src/secure/dtls/lib/sha1.c \
-	./src/secure/dtls/lib/sha256.c \
-	./src/secure/dtls/lib/ssl_ciphersuites.c \
-	./src/secure/dtls/lib/ssl_cli.c \
-	./src/secure/dtls/lib/ssl_srv.c \
-	./src/secure/dtls/lib/ssl_tls.c \
-	./src/secure/dtls/lib/timing.c \
-	./src/secure/dtls/lib/wilddog_dtls.c \
-	./src/secure/dtls/lib/x509.c \
-	./src/secure/dtls/lib/x509_crt.c \
-	./src/secure/dtls/inc/mbedtls/aes.h \
-	./src/secure/dtls/inc/mbedtls/aesni.h \
-	./src/secure/dtls/inc/mbedtls/arc4.h \
-	./src/secure/dtls/inc/mbedtls/asn1.h \
-	./src/secure/dtls/inc/mbedtls/asn1write.h \
-	./src/secure/dtls/inc/mbedtls/base64.h \
-	./src/secure/dtls/inc/mbedtls/bignum.h \
-	./src/secure/dtls/inc/mbedtls/blowfish.h \
-	./src/secure/dtls/inc/mbedtls/bn_mul.h \
-	./src/secure/dtls/inc/mbedtls/camellia.h \
-	./src/secure/dtls/inc/mbedtls/ccm.h \
-	./src/secure/dtls/inc/mbedtls/certs.h \
-	./src/secure/dtls/inc/mbedtls/check_config.h \
-	./src/secure/dtls/inc/mbedtls/cipher.h \
-	./src/secure/dtls/inc/mbedtls/cipher_internal.h \
-	./src/secure/dtls/inc/mbedtls/compat-1.3.h \
-	./src/secure/dtls/inc/mbedtls/config.h \
-	./src/secure/dtls/inc/mbedtls/ctr_drbg.h \
-	./src/secure/dtls/inc/mbedtls/debug.h \
-	./src/secure/dtls/inc/mbedtls/des.h \
-	./src/secure/dtls/inc/mbedtls/dhm.h \
-	./src/secure/dtls/inc/mbedtls/ecdh.h \
-	./src/secure/dtls/inc/mbedtls/ecdsa.h \
-	./src/secure/dtls/inc/mbedtls/ecp.h \
-	./src/secure/dtls/inc/mbedtls/entropy.h \
-	./src/secure/dtls/inc/mbedtls/entropy_poll.h \
-	./src/secure/dtls/inc/mbedtls/error.h \
-	./src/secure/dtls/inc/mbedtls/gcm.h \
-	./src/secure/dtls/inc/mbedtls/havege.h \
-	./src/secure/dtls/inc/mbedtls/hmac_drbg.h \
-	./src/secure/dtls/inc/mbedtls/md2.h \
-	./src/secure/dtls/inc/mbedtls/md4.h \
-	./src/secure/dtls/inc/mbedtls/md5.h \
-	./src/secure/dtls/inc/mbedtls/md.h \
-	./src/secure/dtls/inc/mbedtls/md_internal.h \
-	./src/secure/dtls/inc/mbedtls/memory_buffer_alloc.h \
-	./src/secure/dtls/inc/mbedtls/net.h \
-	./src/secure/dtls/inc/mbedtls/oid.h \
-	./src/secure/dtls/inc/mbedtls/padlock.h \
-	./src/secure/dtls/inc/mbedtls/pem.h \
-	./src/secure/dtls/inc/mbedtls/pkcs11.h \
-	./src/secure/dtls/inc/mbedtls/pkcs12.h \
-	./src/secure/dtls/inc/mbedtls/pkcs5.h \
-	./src/secure/dtls/inc/mbedtls/pk.h \
-	./src/secure/dtls/inc/mbedtls/pk_internal.h \
-	./src/secure/dtls/inc/mbedtls/platform.h \
-	./src/secure/dtls/inc/mbedtls/ripemd160.h \
-	./src/secure/dtls/inc/mbedtls/rsa.h \
-	./src/secure/dtls/inc/mbedtls/sha1.h \
-	./src/secure/dtls/inc/mbedtls/sha256.h \
-	./src/secure/dtls/inc/mbedtls/sha512.h \
-	./src/secure/dtls/inc/mbedtls/ssl_cache.h \
-	./src/secure/dtls/inc/mbedtls/ssl_ciphersuites.h \
-	./src/secure/dtls/inc/mbedtls/ssl_cookie.h \
-	./src/secure/dtls/inc/mbedtls/ssl_internal.h \
-	./src/secure/dtls/inc/mbedtls/ssl.h \
-	./src/secure/dtls/inc/mbedtls/ssl_ticket.h \
-	./src/secure/dtls/inc/mbedtls/threading.h \
-	./src/secure/dtls/inc/mbedtls/timing.h \
-	./src/secure/dtls/inc/mbedtls/version.h \
-	./src/secure/dtls/inc/mbedtls/x509_crl.h \
-	./src/secure/dtls/inc/mbedtls/x509_crt.h \
-	./src/secure/dtls/inc/mbedtls/x509_csr.h \
-	./src/secure/dtls/inc/mbedtls/x509.h \
-	./src/secure/dtls/inc/mbedtls/xtea.h
+	./src/secure/mbedtls/lib/aes.c \
+	./src/secure/mbedtls/lib/aesni.c \
+	./src/secure/mbedtls/lib/arc4.c \
+	./src/secure/mbedtls/lib/asn1parse.c \
+	./src/secure/mbedtls/lib/asn1write.c \
+	./src/secure/mbedtls/lib/base64.c \
+	./src/secure/mbedtls/lib/bignum.c \
+	./src/secure/mbedtls/lib/blowfish.c \
+	./src/secure/mbedtls/lib/camellia.c \
+	./src/secure/mbedtls/lib/ccm.c \
+	./src/secure/mbedtls/lib/certs.c \
+	./src/secure/mbedtls/lib/cipher.c \
+	./src/secure/mbedtls/lib/cipher_wrap.c \
+	./src/secure/mbedtls/lib/ctr_drbg.c \
+	./src/secure/mbedtls/lib/debug.c \
+	./src/secure/mbedtls/lib/des.c \
+	./src/secure/mbedtls/lib/dhm.c \
+	./src/secure/mbedtls/lib/ecdh.c \
+	./src/secure/mbedtls/lib/ecdsa.c \
+	./src/secure/mbedtls/lib/ecp.c \
+	./src/secure/mbedtls/lib/ecp_curves.c \
+	./src/secure/mbedtls/lib/entropy.c \
+	./src/secure/mbedtls/lib/entropy_poll.c \
+	./src/secure/mbedtls/lib/gcm.c \
+	./src/secure/mbedtls/lib/hmac_drbg.c \
+	./src/secure/mbedtls/lib/md5.c \
+	./src/secure/mbedtls/lib/md.c \
+	./src/secure/mbedtls/lib/md_wrap.c \
+	./src/secure/mbedtls/lib/net.c \
+	./src/secure/mbedtls/lib/oid.c \
+	./src/secure/mbedtls/lib/padlock.c \
+	./src/secure/mbedtls/lib/pem.c \
+	./src/secure/mbedtls/lib/pk.c \
+	./src/secure/mbedtls/lib/pkcs12.c \
+	./src/secure/mbedtls/lib/pkcs5.c \
+	./src/secure/mbedtls/lib/pkparse.c \
+	./src/secure/mbedtls/lib/pk_wrap.c \
+	./src/secure/mbedtls/lib/ripemd160.c \
+	./src/secure/mbedtls/lib/rsa.c \
+	./src/secure/mbedtls/lib/sha1.c \
+	./src/secure/mbedtls/lib/sha256.c \
+	./src/secure/mbedtls/lib/ssl_ciphersuites.c \
+	./src/secure/mbedtls/lib/ssl_cli.c \
+	./src/secure/mbedtls/lib/ssl_srv.c \
+	./src/secure/mbedtls/lib/ssl_tls.c \
+	./src/secure/mbedtls/lib/timing.c \
+	./src/secure/mbedtls/lib/wilddog_dtls.c \
+	./src/secure/mbedtls/lib/x509.c \
+	./src/secure/mbedtls/lib/x509_crt.c \
+	./src/secure/mbedtls/inc/mbedtls/aes.h \
+	./src/secure/mbedtls/inc/mbedtls/aesni.h \
+	./src/secure/mbedtls/inc/mbedtls/arc4.h \
+	./src/secure/mbedtls/inc/mbedtls/asn1.h \
+	./src/secure/mbedtls/inc/mbedtls/asn1write.h \
+	./src/secure/mbedtls/inc/mbedtls/base64.h \
+	./src/secure/mbedtls/inc/mbedtls/bignum.h \
+	./src/secure/mbedtls/inc/mbedtls/blowfish.h \
+	./src/secure/mbedtls/inc/mbedtls/bn_mul.h \
+	./src/secure/mbedtls/inc/mbedtls/camellia.h \
+	./src/secure/mbedtls/inc/mbedtls/ccm.h \
+	./src/secure/mbedtls/inc/mbedtls/certs.h \
+	./src/secure/mbedtls/inc/mbedtls/check_config.h \
+	./src/secure/mbedtls/inc/mbedtls/cipher.h \
+	./src/secure/mbedtls/inc/mbedtls/cipher_internal.h \
+	./src/secure/mbedtls/inc/mbedtls/compat-1.3.h \
+	./src/secure/mbedtls/inc/mbedtls/config.h \
+	./src/secure/mbedtls/inc/mbedtls/ctr_drbg.h \
+	./src/secure/mbedtls/inc/mbedtls/debug.h \
+	./src/secure/mbedtls/inc/mbedtls/des.h \
+	./src/secure/mbedtls/inc/mbedtls/dhm.h \
+	./src/secure/mbedtls/inc/mbedtls/ecdh.h \
+	./src/secure/mbedtls/inc/mbedtls/ecdsa.h \
+	./src/secure/mbedtls/inc/mbedtls/ecp.h \
+	./src/secure/mbedtls/inc/mbedtls/entropy.h \
+	./src/secure/mbedtls/inc/mbedtls/entropy_poll.h \
+	./src/secure/mbedtls/inc/mbedtls/error.h \
+	./src/secure/mbedtls/inc/mbedtls/gcm.h \
+	./src/secure/mbedtls/inc/mbedtls/havege.h \
+	./src/secure/mbedtls/inc/mbedtls/hmac_drbg.h \
+	./src/secure/mbedtls/inc/mbedtls/md2.h \
+	./src/secure/mbedtls/inc/mbedtls/md4.h \
+	./src/secure/mbedtls/inc/mbedtls/md5.h \
+	./src/secure/mbedtls/inc/mbedtls/md.h \
+	./src/secure/mbedtls/inc/mbedtls/md_internal.h \
+	./src/secure/mbedtls/inc/mbedtls/memory_buffer_alloc.h \
+	./src/secure/mbedtls/inc/mbedtls/net.h \
+	./src/secure/mbedtls/inc/mbedtls/oid.h \
+	./src/secure/mbedtls/inc/mbedtls/padlock.h \
+	./src/secure/mbedtls/inc/mbedtls/pem.h \
+	./src/secure/mbedtls/inc/mbedtls/pkcs11.h \
+	./src/secure/mbedtls/inc/mbedtls/pkcs12.h \
+	./src/secure/mbedtls/inc/mbedtls/pkcs5.h \
+	./src/secure/mbedtls/inc/mbedtls/pk.h \
+	./src/secure/mbedtls/inc/mbedtls/pk_internal.h \
+	./src/secure/mbedtls/inc/mbedtls/platform.h \
+	./src/secure/mbedtls/inc/mbedtls/ripemd160.h \
+	./src/secure/mbedtls/inc/mbedtls/rsa.h \
+	./src/secure/mbedtls/inc/mbedtls/sha1.h \
+	./src/secure/mbedtls/inc/mbedtls/sha256.h \
+	./src/secure/mbedtls/inc/mbedtls/sha512.h \
+	./src/secure/mbedtls/inc/mbedtls/ssl_cache.h \
+	./src/secure/mbedtls/inc/mbedtls/ssl_ciphersuites.h \
+	./src/secure/mbedtls/inc/mbedtls/ssl_cookie.h \
+	./src/secure/mbedtls/inc/mbedtls/ssl_internal.h \
+	./src/secure/mbedtls/inc/mbedtls/ssl.h \
+	./src/secure/mbedtls/inc/mbedtls/ssl_ticket.h \
+	./src/secure/mbedtls/inc/mbedtls/threading.h \
+	./src/secure/mbedtls/inc/mbedtls/timing.h \
+	./src/secure/mbedtls/inc/mbedtls/version.h \
+	./src/secure/mbedtls/inc/mbedtls/x509_crl.h \
+	./src/secure/mbedtls/inc/mbedtls/x509_crt.h \
+	./src/secure/mbedtls/inc/mbedtls/x509_csr.h \
+	./src/secure/mbedtls/inc/mbedtls/x509.h \
+	./src/secure/mbedtls/inc/mbedtls/xtea.h
 AM_CFLAGS+=-DWILDDOG_PORT=5684
 else
 libwilddog_a_SOURCES+= \
