fix openwrt15.05 link error, cannot find _wilddog_setTimeIncrease

--- a/examples/demo/Makefile
+++ b/examples/demo/Makefile
@@ -39,7 +39,7 @@ define Package/demo
     SECTION:=utils
     CATEGORY:=Utilities
     TITLE:=demo -- prints a snarky message
-    DEPENDS:=+libstdcpp +libc +libwilddog
+    DEPENDS:=+libstdcpp +libc +libwilddog +libgcc_eh
 endef
 
 
